--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "build/web"
-  command = "flutter/bin/flutter build web --release"
+  command = "bash build.sh"
 
 [[redirects]]
   from = "/*"
