--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
+  google_fonts: ^6.2.1
   provider: ^6.1.0
   http: ^1.1.0
   file_picker: ^6.0.0
   image_picker: ^1.0.0
+  shared_preferences: ^2.2.2
   intl: ^0.18.0
 
 dev_dependencies:
